# yorion_engine

./: .cog.toml  .gitignore  CHANGELOG.md  CONSUMING.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-Apache-2.0  LICENSE-MIT  MACOS_QUICK_START.md  NEXT_STEPS.md  Package.swift  QUICK_REFERENCE.md  README.md  SETUP.md  SWIFT_INTEGRATION.md  build.rs  cliff.toml  cog.toml
.github/workflows/: dev-build.yml  release.yml  test-local.yml
data/: bs_calendar_data.json  tithi_exceptions.csv
docs/: CNAME  architecture.md  assumptions.md  bs-rrule-spec.md  consuming-wasm.md  festivals.md  index.html  macos-quick-start.md  overview.md  quick-reference.md  recurring-events.md  recurring.md  recurring_events.md  setup.md  spec.md  swift-integration.md  wasm.md
engine/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
engine/.cargo/: config.toml
engine/benches/: engine_perf.rs
engine/data/: bs_calendar_data.json  tithi_exceptions.csv
engine/docs/: architecture.md  assumptions.md  bs-rrule-spec.md  recurring_events.md
engine/examples/: bs_recurring.rs  compare_tithi_2083.rs  gen_tithi_exceptions.rs  generate_calendar.rs  tithi_recurring.rs  zodiac_check.rs
engine/src/: api.rs  core_api.rs  error.rs  lib.rs  uniffi.udl  uniffi_bindings.rs  wasm.rs
engine/src/adapters/: mod.rs  static_overrides.rs  system_time.rs
engine/src/domain/: bs_date.rs  event.rs  mod.rs  tithi.rs  zodiac.rs
engine/src/domain/recurrence/: bs_rules.rs  recurrence_enum.rs  rrule_parser.rs  tithi_rules.rs
engine/src/ports/: calendar_provider.rs  mod.rs  time_provider.rs
engine/src/services/: astronomical.rs  conversion.rs  instance_generator.rs  tithi_generator.rs
engine/src/utils/: number_utils.rs
engine/tests/: almanac_ground_truth.rs  audit_fixes.rs  conformance_vectors.rs  conversion_ground_truth.rs  cross_validation.rs  festival_ground_truth.rs  integration_workflows.rs  property_invariants.proptest-regressions  property_invariants.rs  unit_adapters.rs  unit_core_api.rs  unit_domain_bs_date.rs  unit_domain_events.rs  unit_domain_tithi.rs  unit_recurrence_ad.rs  unit_recurrence_bs.rs  unit_recurrence_rrule_parser.rs  unit_recurrence_tithi.rs  unit_services_conversion.rs  unit_services_instance_generator.rs  unit_utils.rs  unit_zodiac.rs
engine/tests/data/: bs-rrule-test-vectors.json
engine/tests/data/calendar/: calendar_2067.csv  calendar_2068.csv  calendar_2069.csv  calendar_2070.csv  calendar_2071.csv  calendar_2072.csv  calendar_2073.csv  calendar_2074.csv  calendar_2075.csv  calendar_2076.csv  calendar_2077.csv  calendar_2078.csv  calendar_2079.csv  calendar_2080.csv  calendar_2081.csv  calendar_2082.csv  calendar_2083.csv
engine/tests/data/conversion/: dates_2081.csv  dates_2082.csv  dates_2083.csv  dates_2084.csv  dates_2085.csv
engine/tests/helpers/: mod.rs
engine/tests/unit/domain/: zodiac.rs
examples/: generate_calendar.rs  tithi_recurring.rs  zodiac_check.rs
scripts/: build-flutter.sh  build-macos-arm64.sh  build-macos-x86.sh  build-macos.sh  build-native.sh  build-wasm.sh  download-framework.sh  generate-swift-bindings.sh  list-jobs.sh  package-macos.sh  release.sh  test-workflows.sh
src/: api.rs  core_api.rs  error.rs  lib.rs  wasm.rs
src/ports/: mod.rs  (+1 more)
tests/: property_tests.proptest-regressions  unit_adapters.rs  unit_core_api.rs  unit_domain_bs_date.rs  unit_recurrence.rs  unit_recurrence_bs.rs  unit_recurrence_tithi.rs  unit_utils.rs
(+15 files in other folders)
