[package]
name = "yorion_engine"
version = "0.1.3"
edition = "2021"
authors = ["Umesh Shrestha <umesh@Yorion.io>"]
description = "Platform-agnostic Bikram Sambat calendar engine with tithi support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yorion-io/yorion_engine"
homepage = "https://github.com/Yorion-io/yorion_engine"
keywords = ["bikram-sambat", "nepali-calendar", "calendar", "tithi", "wasm"]
categories = ["date-and-time", "wasm"]
rust-version = "1.82"

[lib]
name = "yorion_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "wasmbind", "clock"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
thiserror = "2.0"
suncalc = "0.3.0"
astro = "2.0.0"
serde_json = "1.0"

# WASM dependencies
wasm-bindgen = { version = "=0.2.122", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# UniFFI for native bindings (Swift, Kotlin, etc.)
uniffi = { version = "0.28", optional = true }

rrule = { version = "0.14.0", default-features = false }


[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys", "getrandom/js"]
uniffi-bindings = ["uniffi"]
uniffi-cli = ["uniffi-bindings", "uniffi/cli"]

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_perf"
harness = false

[build-dependencies]
serde_json = "1.0"
chrono = "0.4"
uniffi = { version = "0.28", features = ["build"], optional = true }


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
